fix: add flex wrap property

--- a/src/pages/catalog-page/_catalogPage.scss
+++ b/src/pages/catalog-page/_catalogPage.scss
@@ -187,6 +187,7 @@ input::-webkit-inner-spin-button {
 
 .sorting-block {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   margin: 1rem;
